// This proto file was automatically generated from xsd by @https://github.com/i-icc/xsd2proto
// Generated by xsd2proto version 0.2.2

syntax = "proto3";

package array;

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_ACTIVE = 1;
  STATUS_INACTIVE = 2;
  STATUS_PENDING = 3;
}

message Address {
  string street = 1;
  string city = 2;
  string postal_code = 3;
  string country = 4;
}

message Person {
  string first_name = 1;
  string last_name = 2;
  int32 age = 3;
  optional string email = 4;
  Address address = 5;
  Status status = 6;
  string id = 7;
}

message Company {
  string name = 1;
  repeated Person employees = 2;
  repeated Address offices = 3;
  repeated string tags = 4;
  optional int32 established = 5;
}

message Team {
  string name = 1;
  repeated Person members = 2;
  repeated string tags = 3;
}

